Fix issue with some elements overlapping mobile nav by changing the z-index on the nav element

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -31,7 +31,6 @@
 }
 
 .card .row {
-  z-index: -1;
   position: relative;
   width: 100%;
 }
