--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,11 +4,13 @@
 }
 
 nav {
+ position: relative;
  justify-content: center;
  display:flex;
  height: 115px;
  background: #FEFEFE;
  filter: drop-shadow(0px 3px 25px rgba(102, 112, 133, 0.25));
+ z-index: 1;
 }
 
 .navLinks a{
