--- a/src/styles/Recipes.css
+++ b/src/styles/Recipes.css
@@ -12,7 +12,6 @@ display: flex;
 
 .searchHeader{
   padding-left: 55px;
-  z-index: -1;
   
 }
 
